added widget in HomeFragment

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,12 @@
     android:orientation="vertical"
     tools:context=".ui.main.MainActivity">
 
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/bottomNavigationView" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
@@ -15,12 +21,6 @@
         android:layout_marginBottom="0dp"
         android:background="@color/gray"
         app:menu="@menu/bottom_nav_menu">
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@id/bottomNavigationView"
-            android:id="@+id/frameLayout"/>
     </com.google.android.material.bottomnavigation.BottomNavigationView>
 
 </RelativeLayout>
