--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,37 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.home.HomeFragment">
 
-    <FrameLayout
-        android:padding="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="300dp">
-
-        <LinearLayout
-            android:layout_marginTop="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="205dp"
-            android:background="@drawable/widget_background"/>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:paddingStart="40dp"
-            android:paddingBottom="35dp"
-            android:layout_width="wrap_content"
-            android:layout_height="235dp">
-
-            <com.google.android.material.imageview.ShapeableImageView
-                android:layout_width="195dp"
-                android:layout_height="195dp"
-                app:srcCompat="@drawable/soulking"
-                app:strokeWidth="2dp"
-                app:strokeColor="@android:color/black"
-                app:shapeAppearanceOverlay="@style/roundCorners" />
-
-        </LinearLayout>
-
-    </FrameLayout>
+    <!--Store Banner-->
+    <include layout="@layout/store_banner"/>
 
 </LinearLayout>
