--- a/app/src/main/res/layout/store_banner.xml
+++ b/app/src/main/res/layout/store_banner.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--Store sign-->
+<?xml version="1.0" encoding="utf-8"?>
+<!--Store sign-->
 <FrameLayout android:layout_width="match_parent"
     android:layout_height="260dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -38,6 +39,7 @@
         android:layout_height="220dp"
         android:layout_marginStart="307dp">
 
+        <!-- First vertical part of text-->
         <TextView
             android:layout_marginTop="19dp"
             android:layout_width="16dp"
@@ -53,6 +55,7 @@
             android:textSize="21sp"
             android:textStyle="bold" />
 
+        <!-- Second vertical part of text-->
         <TextView
             android:layout_width="14dp"
             android:layout_height="wrap_content"
