--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#CACACA</color>
@@ -13,4 +14,8 @@
     <color name="end_widgetColor">#6B4C8A</color>
 
     <color name="shadow_color">#272727</color>
+    <color name="basket_fab_color">#6A3E95</color>
+
+    <color name="basket_header_color">#4D4757</color>
+
 </resources>
