--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
@@ -10,23 +11,39 @@
     <include layout="@layout/basket_nav"/>
 
     <!-- Layout for content-->
-    <FrameLayout
-        android:id="@+id/content_frame"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+   <androidx.constraintlayout.widget.ConstraintLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
 
-        <!--Store Banner-->
-        <include
-            layout="@layout/store_banner"/>
+       <!-- Store banner-->
+       <include
+           android:id="@+id/store_banner_include"
+           layout="@layout/store_banner" />
 
-        <TextView
-            android:id="@+id/fragment_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+       <!-- SearchView-->
+       <include
+           layout="@layout/search_view"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:layout_below="@+id/store_banner_include"
+           android:layout_alignParentStart="true"
+           android:layout_alignParentEnd="true"
+           android:layout_marginStart="10dp"
+           android:layout_marginEnd="10dp"
+           app:layout_constraintEnd_toEndOf="parent"
+           app:layout_constraintStart_toStartOf="parent"
+           app:layout_constraintTop_toBottomOf="@+id/store_banner_include" />
 
-        <!-- FAB-->
-        <include layout="@layout/basket_fab"/>
+       <!-- FloatingAcrionButton -->
+       <include
+           layout="@layout/basket_fab"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_marginEnd="20dp"
+           android:layout_marginBottom="20dp"
+           app:layout_constraintBottom_toBottomOf="parent"
+           app:layout_constraintEnd_toEndOf="parent" />
 
-    </FrameLayout>
+   </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.drawerlayout.widget.DrawerLayout>
