--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,7 +34,7 @@
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/store_banner_include" />
 
-       <!-- FloatingAcrionButton -->
+       <!-- FloatingActionButton -->
        <include
            layout="@layout/basket_fab"
            android:layout_width="wrap_content"
