--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.more.MoreFragment">
+    tools:context=".ui.mainfragments.MoreFragment">
 
     <!-- NavigationView -->
     <include layout="@layout/basket_nav" />
