added InstrumentActivity.java and Fragments that display instrument information (also include background, icons and listeners)

--- a/app/src/main/res/drawable/underlining_line.xml
+++ b/app/src/main/res/drawable/underlining_line.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!-- Element for underlining text in fragment_liked -->
+<!-- Element for underlining text by line -->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
