--- a/app/src/main/res/drawable/buy_button_background.xml
+++ b/app/src/main/res/drawable/buy_button_background.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!-- Background to buy button in fragment_instrument.xml -->
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="?colorControlHighlight">
 
@@ -6,8 +8,9 @@
     <item>
         <!-- the background shape when it's not being clicked -->
         <shape android:shape="rectangle">
-            <solid android:color="@color/recycler_view_item_color" />
-            <corners android:radius="20dp" />
+            <corners android:radius="15dp" />
+            <solid android:color="@color/buy_button_color" />
+
         </shape>
 
     </item>
