--- a/app/src/main/res/drawable/instrument_photo_background.xml
+++ b/app/src/main/res/drawable/instrument_photo_background.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="?colorControlHighlight">
-
     <!-- default ripple color -->
     <item>
         <!-- the background shape when it's not being clicked -->
         <shape android:shape="rectangle">
             <solid android:color="@color/recycler_view_item_color" />
-            <corners android:radius="20dp" />
+            <corners
+                android:bottomLeftRadius="30dp"
+                android:bottomRightRadius="30dp" />
         </shape>
-
     </item>
-
 </ripple>
